# Crankys-Cloud

./: .env.example  .gitignore  LICENSE  README.md  astro.config.mjs  auth.config.ts  drizzle.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  wrangler.jsonc
backend/: README.txt  package-lock.json  package.json  wrangler.toml
backend/src/: index.ts
crankys-imgen/: Cargo.toml  wrangler.toml
crankys-imgen/src/: lib.rs
drizzle/: 0000_silly_scalphunter.sql  0001_zippy_puff_adder.sql  0003_mixed_marvel_boy.sql  0004_right_blue_marvel.sql  0005_sleepy_infant_terrible.sql  0007_broken_silver_fox.sql  0009_puzzling_tarantula.sql
drizzle/meta/: 0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  0004_snapshot.json  0005_snapshot.json  0006_snapshot.json  0007_snapshot.json  0008_snapshot.json  0009_snapshot.json  _journal.json
frontend/: .env.example  README.md  astro.config.mjs  index.html  package-lock.json  package.json  style.css
src/actions/: index.ts
src/components/: Card.astro  FileDrop.astro  Footer.astro  Header.astro  LevelsContainer.astro  Logout.astro
src/db/: connection.ts  schema.ts
src/layouts/: BaseLayout.astro
src/pages/: 404.astro  dashboard.astro  index.astro  login.astro  privacy.astro  tos.astro
src/styles/: global.scss
website/: .env.example  README.md  astro.config.mjs  pnpm-lock.yaml  tsconfig.json
website/drizzle/: 0002_dapper_rawhide_kid.sql  0006_faulty_jackal.sql  0008_married_baron_zemo.sql  0010_boring_thunderbolts.sql  0011_common_prodigy.sql
website/patches/: auth-astro.patch
(+40 files in other folders)
