[package]
name = "crankys-imgen"
version = "0.1.0"
edition = "2021"
authors = ["MrDulfin <mrdulfin@dangoware.org>"]

[package.metadata.release]
release = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.6", features = ['http'] }
worker-macros = { version = "0.6", features = ['http'] }
http = "1.3"
console_error_panic_hook = "0.1.7"
http-body-util = "0.1.3"
image = "0.25.8"
serde_json = "1.0.145"
serde = "1.0.226"
